# MathCore

./: .gitignore  README.md
math_lib/: CMakeLists.txt
math_lib/examples/: examples.cpp
math_lib/include/: math_utils.hpp  matrix.hpp  matrix_utils.hpp
math_lib/src/: math_utils.cpp  matrix.cpp  matrix_utils.cpp
math_lib/tests/: test_math_utils.cpp  test_matrix.cpp
matrix_lib/: CMakeLists.txt
matrix_lib/examples/: examples.cpp
matrix_lib/include/: linear_algebra.hpp  matrix.hpp  matrix_utils.hpp
matrix_lib/src/: linear_algebra.cpp  matrix.cpp  matrix_utils.cpp
matrix_lib/tests/: test_linear_algebra.cpp  test_matrix.cpp
